src/styles.css
/* You can add global styles to this file, and also import other style files */
@font-face {
  font-family: Enhance;
  src: url(D:\stopnc\stopnc\Jaapokki-font-package-1.0\enchance\web\jaapokkienchance-regular.woff);
}
@font-face {
  font-family: Regular;
  src: url(D:\stopnc\stopnc\Jaapokki-font-package-1.0\Regular\web\jaapokki-regular.woff);
}
@font-face {
  font-family: Subtract;
  src: url(D:\stopnc\stopnc\Jaapokki-font-package-1.0\subtract\web\jaapokkisubtract-regular.woff);
}

a {
  cursor: pointer;
  z-index: 10;
}
html,
body {
  max-width: 100% !important;
  overflow-x: hidden !important;
}
.mat-drawer-inner-container {
  width: 100%;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden !important;

  -webkit-overflow-scrolling: touch;
}
textarea:focus,
input:focus {
  outline: none;
}
a:focus,
a:hover {
  text-decoration: none !important;
}

